--- a/Stats on Sight/Stats on Sight/Base.lproj/Main.storyboard
+++ b/Stats on Sight/Stats on Sight/Base.lproj/Main.storyboard
@@ -69,10 +69,59 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </visualEffectView>
+                            <visualEffectView hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="100" translatesAutoresizingMaskIntoConstraints="NO" id="pJ3-dU-52b" userLabel="Loading Panel">
+                                <rect key="frame" x="187" y="428" width="40" height="40"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="OsO-2a-Bhz">
+                                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lec-FE-1yI">
+                                            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="iz6-fD-zDb">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="E1q-mx-CA8">
+                                                        <rect key="frame" x="10" y="10" width="20" height="20"/>
+                                                        <subviews>
+                                                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="w2N-rj-E77">
+                                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                            </activityIndicatorView>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="E1q-mx-CA8" firstAttribute="top" secondItem="iz6-fD-zDb" secondAttribute="top" constant="10" id="0mH-lC-F8D"/>
+                                                    <constraint firstItem="E1q-mx-CA8" firstAttribute="leading" secondItem="iz6-fD-zDb" secondAttribute="leading" constant="10" id="2tn-ub-a6l"/>
+                                                    <constraint firstAttribute="trailing" secondItem="E1q-mx-CA8" secondAttribute="trailing" constant="10" id="fEP-7S-m47"/>
+                                                    <constraint firstAttribute="bottom" secondItem="E1q-mx-CA8" secondAttribute="bottom" constant="10" id="xCi-ol-jbG"/>
+                                                </constraints>
+                                            </view>
+                                            <vibrancyEffect>
+                                                <blurEffect style="extraLight"/>
+                                            </vibrancyEffect>
+                                        </visualEffectView>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="lec-FE-1yI" firstAttribute="height" secondItem="pJ3-dU-52b" secondAttribute="height" id="NKd-Jx-znS"/>
+                                    <constraint firstItem="lec-FE-1yI" firstAttribute="width" secondItem="pJ3-dU-52b" secondAttribute="width" id="l8w-Lp-Bed"/>
+                                    <constraint firstItem="lec-FE-1yI" firstAttribute="centerY" secondItem="pJ3-dU-52b" secondAttribute="centerY" id="tG5-rI-Fxu"/>
+                                    <constraint firstItem="lec-FE-1yI" firstAttribute="centerX" secondItem="pJ3-dU-52b" secondAttribute="centerX" id="vOR-dB-NAm"/>
+                                </constraints>
+                                <blurEffect style="light"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="pJ3-dU-52b" firstAttribute="centerX" secondItem="U0K-SW-4ec" secondAttribute="centerX" id="AgK-ZY-3Pm"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
+                            <constraint firstItem="pJ3-dU-52b" firstAttribute="centerY" secondItem="U0K-SW-4ec" secondAttribute="centerY" id="Jqj-qL-Mmz"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="oTW-gO-jUn" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="30" id="a1w-fd-wCY"/>
@@ -82,6 +131,8 @@
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
+                        <outlet property="loadingIndicator" destination="w2N-rj-E77" id="6v0-to-9Xz"/>
+                        <outlet property="loadingPanel" destination="pJ3-dU-52b" id="qUS-qK-P0g"/>
                         <outlet property="messageLabel" destination="jeS-HM-XAx" id="8jN-iN-feQ"/>
                         <outlet property="messagePanel" destination="oTW-gO-jUn" id="8JS-Oz-fam"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
